- `exterminate`: don't kill friendly undead (unless ``--include-friendly`` is passed) when specifying ``undead`` as the target

## Misc Improvements

## Documentation

## API
- ``Units``: new ``isWildlife`` and ``isAgitated`` property checks

## Lua
- ``dfhack.units``: ``isWildlife`` and ``isAgitated`` property checks
- ``dfhack.units.isDanger``: no longer returns true for intelligent undead

## Removed

# 50.13-r4

## New Features
- `gui/journal`: new hotkey, accessible from anywhere in fort mode: Ctrl-j

## Fixes
- `changelayer`: fix incorrect lookup of geological region in multi-region embarks
- Copy/Paste: Fix handling of multi-line text when interacting with the system clipboard on Windows
- `zone`: fix alignment of animal actions overlay panel (the one where you can click to geld/train/etc.) when the animal has a custom portrait (like named dragons)
- `autodump`: cancel any jobs that point to dumped items
- `add-spatter`: fix a crash related to unloading a savegame with add-spatter reactions, then loading a second savegame with add-spatter reactions
- `plant`: properly detect trees in a specified cuboid that only have branches/leaves in the cuboid area

## Misc Improvements
- performance improvements for DFHack tools and infrastructure
- `gui/pathable`: give edge tiles where wagons can enter the map a special highlight to make them more identifiable. this is especially useful when the game decides that only a portion of the map edge is usable by wagons.
- `autodump`: allow dumping items into mid-air, converting them into projectiles like `gui/autodump` does

## Documentation
- improved docs for ``dfhack.units`` module functions

## API
- ``Units``: add overloads that take historical figures for ``getReadableName``, ``getVisibleName``, and ``getProfessionName``
- ``Units::isUnitInBox``, ``getUnitsInBox``: add versions that take a cuboid range, add filter fn parameter for ``getUnitsInBox``
- ``Units::getProfession``: account for units with fake identities